--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_BACKEND_URL=http://127.0.0.1:8085
-REACT_APP_PASSPHRASE_SECRET=ÓqwrfWEFEQWCQąśćąść__
+REACT_APP_PASSPHRASE_SECRET=ItWillBeChanged
