--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "EuroDachshund",
-  "name": "EuroDachshund - kasyno internetowe",
+  "name": "EuroDachshund - kasyno internetowe (DEMO)",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#212529",
+  "theme_color": "#4169E1",
   "background_color": "#212529"
 }
