--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "crypto-js": "^4.1.1",
@@ -24,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && gzipper --verbose ./build",
+    "build": "react-scripts build --production && gzipper --verbose ./build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
